# wordpress-post-mcp

./: LICENSE  README.md  pyproject.toml
docs/: design.md
src/wordpress_post_mcp/: config.py  errors.py  markdown.py  server.py  wp_client.py
tests/: conftest.py  test_config.py  test_markdown.py  test_wp_client.py
tests/test_tools/: test_create_draft.py  test_get_post.py  test_list_categories.py  test_list_posts.py  test_list_tags.py
